<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

<LinearLayout android:orientation="vertical" android:layout_height="fill_parent" android:layout_width="fill_parent" >
    <!--head -->
    <LinearLayout android:background="#aaa" android:orientation="horizontal" android:layout_height="50dp" android:layout_width="fill_parent" android:layout_marginBottom="10dp">
        <TextView android:textColor="#000" android:gravity="center" android:textSize="18dp" android:textStyle="bold"
                  android:layout_height="fill_parent" android:layout_width="fill_parent" android:text="@string/description_article_title" />
    </LinearLayout>
    <!-- end head -->

    <!--название полное -->
    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:visibility="gone"   android:text="@string/name_long" android:gravity="right" android:layout_height="wrap_content" android:layout_width="100dp" />
        <TextView android:id="@+id/articel_name_full" android:textSize="16dp" android:textStyle="bold" android:text="123" android:gravity="left" android:layout_height="wrap_content" android:layout_width="fill_parent"  />
    </LinearLayout>
    <!--конец Артикль -->

<!--штрихкод -->
<LinearLayout  android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
    <TextView android:text="@string/bare_code" android:gravity="right" android:layout_height="wrap_content" android:layout_width="100dp" android:paddingRight="5dp" />
    <TextView android:id="@+id/articel_bcode" android:text="" android:gravity="left" android:layout_height="wrap_content" android:layout_width="1dp" android:layout_weight="3" />
</LinearLayout>
<!--конец штрихкод -->

    <!--код 1С -->
    <LinearLayout android:visibility="gone" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:text="Код 1С: " android:gravity="right" android:layout_height="wrap_content" android:layout_width="100dp" android:paddingRight="5dp" />
        <TextView android:id="@+id/articel_1c_code" android:text="123" android:gravity="left" android:layout_height="wrap_content" android:layout_width="1dp" android:layout_weight="3" />
    </LinearLayout>
    <!--конец код 1С -->

    <!--Название -->
    <LinearLayout android:visibility="gone" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:text="@string/name_" android:gravity="right" android:layout_height="wrap_content" android:layout_width="1dp" android:layout_weight="1" android:paddingRight="5dp" />
        <TextView android:id="@+id/articel_name" android:text="123" android:gravity="left" android:layout_height="wrap_content" android:layout_width="1dp" android:layout_weight="3" />
    </LinearLayout>
    <!--конец Название -->

    <!--Артикль -->
    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:text="@string/article_id" android:gravity="right" android:layout_height="wrap_content" android:layout_width="100dp" android:paddingRight="5dp" />
        <TextView android:id="@+id/articel_art_id" android:text="" android:gravity="left" android:layout_height="wrap_content" android:layout_width="1dp" android:layout_weight="3" />
    </LinearLayout>
    <!--конец Артикль -->
    <!--Еденицы -->
    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:text="@string/units" android:gravity="right" android:layout_height="wrap_content" android:layout_width="100dp" android:paddingRight="5dp" />
        <TextView android:id="@+id/articel_unit" android:text="" android:gravity="left" android:layout_height="wrap_content" android:layout_width="1dp" android:layout_weight="3" />
    </LinearLayout>
    <!--конец Еденицы -->

    <!--Еденицы -->
    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:text="@string/booking_count" android:gravity="right" android:layout_height="wrap_content" android:layout_width="100dp" android:paddingRight="5dp" />
        <TextView android:id="@+id/articel_count_db" android:text="" android:gravity="left" android:layout_height="wrap_content" android:layout_width="1dp" android:layout_weight="3" />
    </LinearLayout>
    <!--конец Еденицы -->



    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">

    <EditText android:id="@+id/article_v_count" android:digits="0123456789" android:hint="@string/real_count" android:inputType="phone" android:layout_weight="2" android:layout_height="wrap_content" android:layout_width="0dp"/>

   <Button android:id="@+id/article_ok" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="0dp" android:text="ok"/>
    </LinearLayout>
</LinearLayout>

</LinearLayout>